corregimos el título del formulario

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Add Add A Product</h4>
+                        <h4>Add A Product</h4>
                     </div>
                     <form id="product-form" class="card-body">
                         <div class="form-group">
